# STELLOPT

./: build_all  makefile
DKES/Sources/General/: printout.f
FIELDLINES/Sources/: fieldlines_follow.f90
LIBSTELL/Sources/Modules/: fieldlines_input_mod.f90  thrift_globals.f90  thrift_input_mod.f90
LIBSTELL/Sources/STELLOPT/: stellopt_input_mod.f90  stellopt_targets.f90
PENTA/Sources/: penta_interface_mod.f90
SHARE/: make_macports.inc  make_ubuntu_yuan.inc
STELLOPTV2/: ObjectList  STELLOPTV2.dep
STELLOPTV2/Sources/Chisq/: chisq_dkes.f90  chisq_dkes_alpha.f90  chisq_dkes_erdiff.f90  chisq_quasiiso.f90
STELLOPTV2/Sources/General/: stellopt_load_targets.f90  stellopt_optimize.f90  stellopt_renorm.f90  stellopt_txport.f90
THRIFT/Sources/: thrift_boozer.f90  thrift_dkes.f90  thrift_evolve.f90  thrift_funcs.f90  thrift_init.f90  thrift_input_mod.f90  thrift_interface_mod.f90  thrift_jinductive.f90  thrift_penta.f90  thrift_profiles_mod.f90  thrift_run_bootstrap.f90  thrift_runtime.f90  thrift_vars.f90
VMEC2000/Sources/General/: vmec_params.f
VMEC2000/Sources/Input_Output/: fileout.f
VMEC2000/Sources/TimeStep/: evolve.f  runvmec.f
VMEC2STEL/Sources/: vmec2stel_main.f90
pySTEL/: STELLOPT.py  pyproject.toml  setup.py
pySTEL/libstell/: dkes.py  fieldlines.py  penta.py  plasma.py  stellopt.py  thrift.py  wall.py
